# sophies-garden

./: .env  .gitignore  README.md  init_db.py  migrate.py  nixpacks.toml  pyproject.toml  requirements.txt  tailwind.config.js
app/: __init__.py
migrations/: README.md  alembic.ini  env.py
migrations/versions/: 001_initial_schema.py  002_garden_logbook.py
static/css/: sophie.css  style.css
templates/: about.html  admin.html  base.html  blog.html  blog_detail.html  contact.html  dashboard.html  gallery.html  index.html  logbook.html  logbook_detail.html  logbook_new.html  plant_detail.html  plants.html  services.html
